--- a/css/style.css
+++ b/css/style.css
@@ -50,12 +50,21 @@ body{
         z-index: -1;
         padding: 1.5rem;
         line-height: 2rem;
-        background-color: whitesmoke;
+        color: #333333;
+        background-color: #FFF5E1;
         width: 390px;
         height: 200px;
         margin-left: 5px;
         transition: all .75s;
-        font-family: sans-serif;
+        font-family: 'Dancing Script';
+        font-size: 21px;
+        border: 3px solid #e4bfb3;
+        box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+        border-radius: 10px;
+        .firma{
+          text-align: center;
+          margin-top: 20px;
+        }
       }
 
       .open-paper{
