--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ body{
         transition: all .75s;
         font-family: 'Dancing Script';
         font-size: 21px;
-        border: 3px solid #d4a5a5;
+        border: 3px solid #c08081;
         box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
         border-radius: 10px;
         .firma{
